# squidhammer

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  dev.sh  dist-workspace.toml  flake.nix  tinychange.toml
collection_traits/: Cargo.toml
collection_traits/src/: array.rs  arrayvec.rs  has_length.rs  hash_map.rs  lib.rs  order_map.rs  slice.rs  smallvec.rs  vec.rs
dbe/: Cargo.toml  build.rs
dbe/locales/: en.toml
dbe/src/: commands.rs  dbe_files.rs  editable.rs  evaluator.rs  graph.rs  lib.rs  nodes.rs  states.rs  value.rs  vfs.rs
dbe/src/graph/: evaluator.rs  event.rs  nodes.rs  port_shapes.rs
dbe/src/graph/nodes/: data.rs  scalar.rs  struct_node.rs  traits.rs  vector.rs
dbe/src/nodes/: data.rs  scalar.rs  traits.rs  vector.rs
dbe/src/states/: broken_state.rs  error_state.rs  init_state.rs  loading_state.rs  main_state.rs  project_config.rs  title_screen_state.rs
dbe/src/states/main_state/: edit.rs  file_edit.rs  file_tree.rs  mesh_test.rs  state.rs  types_debug.rs
dbe/src/value/: connections.rs  draw.rs  etype.rs
dbe/src/value/draw/: editor.rs
dbe/src/value/etype/: registry.rs  serialization.rs
dbe2/: Cargo.toml
dbe2/src/: etype.rs  graph.rs  json_utils.rs  lib.rs  project.rs  registry.rs  serialization.rs  validation.rs  value.rs
dbe2/src/etype/: conversion.rs  default.rs  econst.rs  eenum.rs  eitem.rs  estruct.rs
dbe2/src/etype/eenum/: pattern.rs  variant.rs
dbe2/src/graph/: execution.rs  node.rs
dbe2/src/graph/execution/: partial.rs
dbe2/src/graph/node/: commands.rs  enum_node.rs  functional.rs  list.rs  reroute.rs  struct_node.rs
dbe2/src/json_utils/: formatter.rs  repr.rs
dbe2/src/json_utils/repr/: colors.rs
dbe2/src/project/: io.rs
dbe2/src/registry/: config.rs
dbe2/src/serialization/: item.rs
dbe2/src/validation/ids/: numeric.rs
dbe2/src/value/: id.rs  ord.rs
dbe2/src/value/id/: editor_id.rs
dbe2_ui/: Cargo.toml
dbe2_ui/src/: diagnostics_list.rs  error.rs  file_tree.rs  lib.rs  main.rs  workspace.rs
dbe2_ui/src/widgets/: report.rs
dbe2_ui/src/workspace/: editors.rs  editors_owned.rs  graph.rs
dbe2_ui/src/workspace/editors/: boolean.rs  consts.rs  enums.rs  errors.rs  list.rs  number.rs  rgb.rs  string.rs  structs.rs  utils.rs  wrapped.rs
dbe2_ui/src/workspace/graph/: viewer.rs
dbe_backend/: Cargo.toml
dbe_backend/src/: etype.rs  graph.rs  json_utils.rs  lib.rs  project.rs  registry.rs  serialization.rs  validation.rs  value.rs
dbe_backend/src/etype/: conversion.rs  econst.rs  eenum.rs  eitem.rs  eobject.rs  estruct.rs  property.rs  title.rs
dbe_backend/src/etype/eenum/: pattern.rs  variant.rs
dbe_backend/src/etype/property/: default_properties.rs
dbe_backend/src/graph/: cache.rs  editing.rs  execution.rs  inputs.rs  node.rs  region.rs
dbe_backend/src/graph/execution/: partial.rs
dbe_backend/src/graph/node/: colors.rs  commands.rs  creation.rs  editable_state.rs  enum_node.rs  expression_node.rs  format_node.rs  functional.rs  generic.rs  groups.rs  list.rs  mappings.rs  ports.rs  regional.rs  reroute.rs  saving_node.rs  serde_node.rs  stateful.rs  struct_node.rs  variables.rs
dbe_backend/src/graph/region/: region_graph.rs
dbe_backend/src/json_utils/: json_serde.rs  repr.rs
dbe_backend/src/json_utils/repr/: colors.rs
dbe_backend/src/project/: docs.rs  io.rs  module.rs  project_graph.rs  side_effects.rs  undo.rs
dbe_backend/src/project/io/: embedded.rs  fs.rs
dbe_backend/src/project/side_effects/: mappings.rs  storage.rs
dbe_backend/src/registry/: config.rs  optional_helpers.rs
dbe_backend/src/registry/config/: merge.rs
dbe_backend/src/serialization/: item.rs
dbe_backend/src/validation/ids/: numeric.rs
dbe_backend/src/value/: id.rs
dbe_backend/src/value/id/: editor_id.rs  parsing.rs
dbe_eframe/: Cargo.toml  build.rs  dist.toml
dbe_eframe/src/: main.rs
dbe_ui/: Cargo.toml
dbe_ui/src/: diagnostics_list.rs  error.rs  file_tree.rs  info.rs  lib.rs  main_toolbar.rs  settings.rs  ui_props.rs  updates.rs  widgets.rs  workspace.rs
dbe_ui/src/main_toolbar/: colors.rs  docs.rs  file_tree.rs  history.rs
dbe_ui/src/widgets/: collapsible_toolbar.rs  dpanel.rs  dropdown.rs  report.rs  rotated_label.rs  toggle_button.rs
dbe_ui/src/widgets/collapsible_toolbar/: simple_new_tab_menu.rs
dbe_ui/src/workspace/: editors.rs  editors_owned.rs  graph.rs
dbe_ui/src/workspace/editors/: boolean.rs  consts.rs  enum_flags.rs  enums.rs  errors.rs  id_ref.rs  list.rs  map.rs  number.rs  quick.rs  rgb.rs  string.rs  structs.rs  utils.rs  (+1 more)
eframe_runner/: Cargo.toml
eframe_runner/src/: main.rs
eh_codegen/: Cargo.toml
eh_codegen/src/: codegen.rs  main.rs
list_edit/: Cargo.toml
list_edit/src/: handle.rs  lib.rs
node_macro/: Cargo.toml
node_macro/src/: lib.rs
squidfmt/: Cargo.toml
squidfmt/src/: formatting.rs  lib.rs  parsing.rs  tests.rs
squidfmt/src/formatting/: maps.rs
squidfmt/src/snapshots/: squidfmt__tests__formatting@braces.toml.snap  squidfmt__tests__formatting@repeated_keys.toml.snap  squidfmt__tests__formatting@simple.toml.snap  squidfmt__tests__parsing@emojis.txt.snap  squidfmt__tests__parsing@error_bad_key_char.txt.snap  squidfmt__tests__parsing@error_unmatched_closing_brace.txt.snap  squidfmt__tests__parsing@error_unmatched_opening_brace.txt.snap  squidfmt__tests__parsing@error_unterminated_closing_brace.txt.snap  squidfmt__tests__parsing@escaped_braces.txt.snap  squidfmt__tests__parsing@keys_only.txt.snap  squidfmt__tests__parsing@no_keys.txt.snap  squidfmt__tests__parsing@repeated_keys.txt.snap  squidfmt__tests__parsing@simple_keys.txt.snap
utils/: Cargo.toml
utils/src/: color_format.rs  convex_math.rs  egui.rs  errors.rs  get_ref.rs  iter_utils.rs  lib.rs  map.rs  math.rs  reporter.rs  ring_stack.rs  vec_utils.rs  whatever_ref.rs
utils/src/convex_math/: convex_hull_2d.rs  minkowski.rs
utils/src/math/: convex_hull_2d.rs  minkowski.rs
utils/src/whatever_ref/: non_clone.rs  o_map.rs
xchange/: Cargo.toml
xchange/src/: main.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
(+2503 files in other folders)
