[workspace]
resolver = "2"
members = [
    "dbe_backend",
    "dbe_eframe",
    "dbe_ui",
    "diagnostic",
    "eh_codegen",
    "list_edit",
    "node_macro",
    "utils",
    "xtask"
]

[workspace.dependencies]
ahash = "0.8.11"
atomic_refcell = "0.1.13"
backtrace-on-stack-overflow = "0.3.0"
camino = "1.1.7"
cansi = "2.2.1"
clap = "4.5.13"
codegen_schema = { git = "https://github.com/juh9870/eh_codegen.git", rev = "4cf9c64e29ce85bc935c605b79aa477a41976162" }
color-backtrace = "0.6.1"
convert_case = "0.6.0"
csscolorparser = "0.7"
derive_more = "1.0.0"
downcast-rs = "1.2.1"
dyn-clone = "1.0.17"
eframe = "0.29.1"
egui = "0.29.1"
egui-modal = "0.5.0"
egui-snarl = "0.5.0"
egui-toast = "0.15.0"
egui_colors = { git = "https://github.com/juh9870/egui_colors.git", rev = "32df52dd8ba9736edc5a92be6b9d30d77fc08955" }
egui_dnd = "0.10.0"
egui_dock = "0.14.0"
egui_file = "0.19.0"
egui_hooks = "0.6.1"
egui_tracing = "0.2.6"
emath = "0.29.1"
embed-resource = "3.0.1"
fs-err = "3.0.0"
inline_tweak = "1.1.1"
itertools = "0.13.0"
knuffel = { git = "https://github.com/TheLostLambda/knuffel.git", rev = "744bf56c1fc64b87f7c47d67470ff7898970dc70" } # TODO: upgrade to https://github.com/TheLostLambda/knus
lockfree-object-pool = "0.1.6"
miette = "7.2.0"
num-traits = "0.2.19"
num_cpus = "1.16.0"
ordered-float = "4.2.0"
parking_lot = "0.12.3"
paste = "1.0.14"
path-clean = "1.0.1"
random_color = "1.0.0"
rayon = "1.10.0"
rstest = "0.23.0"
runtime-format = "0.1.3"
sanitise-file-name = "1.0.0"
serde = "1.0.196"
serde_json = "1.0.120"
serde_json5 = "0.1.0"
smallvec = "1.13.2"
strip-ansi-escapes = "0.2.0"
strum = "0.26.1"
thiserror = "2.0.3"
toml = "0.8.16"
tracing = "0.1.40"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.18"
ustr = "1.0.0"
uuid = "1.11.0"
walkdir = "2.5.0"
maybe-owned = "0.3.4"

# Workspace crates
dbe_backend = { path = "dbe_backend" }
dbe_ui = { path = "dbe_ui" }
utils = { path = "utils" }
list_edit = { path = "list_edit" }
diagnostic = { path = "diagnostic" }

[patch.'https://github.com/TheLostLambda/miette']
miette = { git = "https://github.com/zkat/miette", rev = "bf5aa3742fd664be3c93160b9c28c145b1ed8bc9" }

[patch.crates-io]
miette = { git = "https://github.com/zkat/miette", rev = "bf5aa3742fd664be3c93160b9c28c145b1ed8bc9" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0
#debug = 0
#strip = "debuginfo"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
publish = false
