[workspace]
resolver = "2"
members = [
    "collection_traits",
    "dbe_backend",
    "dbe_eframe",
    "dbe_ui",
    "diagnostic",
    "eh_codegen",
    "list_edit",
    "squidfmt",
    "utils",
    "xchange",
    "xtask"
]

[workspace.dependencies]
tinychange = "0.3.1"
arrayvec = "0.7.6"
ouroboros = "0.18.5"
bitflags = "2.8.0"
ahash = "0.8.11"
anyhow = "1.0.95"
atomic_refcell = "0.1.13"
backtrace-on-stack-overflow = "0.3.0"
camino = "1.1.7"
cansi = "2.2.1"
clap = "4.5.13"
codegen_schema = { git = "https://github.com/juh9870/eh_codegen.git", rev = "4cf9c64e29ce85bc935c605b79aa477a41976162" }
color-backtrace = "0.6.1"
convert_case = "0.6.0"
csscolorparser = "0.7"
derive_more = "1.0.0"
downcast-rs = "2.0.1"
duplicate = "2.0.0"
dyn-clone = "1.0.17"
dyn-hash = "0.2.0"
ecolor = "0.30.0"
eframe = "0.30"
egui = "0.30"
egui-modal = "0.6.0"
egui-snarl = { git = "https://github.com/juh9870/egui-snarl.git", rev = "59a3427e4a3168c23444b24925d33cc0ec8bd204" }
egui-toast = "0.16.0"
egui_colors = { git = "https://github.com/frankvgompel/egui_colors.git", rev = "3611798ea18d46cc4c7d7d5078929c9486f44c84" }
egui_commonmark = "0.19.0"
egui_dnd = "0.11.0"
egui_dock = "0.15.0"
egui_file = "0.21.0"
egui_hooks = { git = "https://github.com/juh9870/egui_hooks.git", rev = "15dbf26a5c5035e3f8786d75a5c965ad1383d8b3" }
egui_tracing = { git = "https://github.com/juh9870/egui_tracing.git", rev = "7c9c5e3bf08579915baa0f10a21c473054924e94" }
emath = "0.30.0"
embed-resource = "3.0.1"
exmex = "0.20.3"
fs-err = "3.0.0"
inline_tweak = "1.1.1"
insta = "1.41.1"
itertools = "0.14.0"
knus = { git = "https://github.com/TheLostLambda/knuffel.git", rev = "163f3291b741f10776f64767ff13b8bb60092685" }
lockfree-object-pool = "0.1.6"
maybe-owned = "0.3.4"
miette = "7.4.0"
num-traits = "0.2.19"
num_cpus = "1.16.0"
ordered-float = "4.2.0"
ordermap = "0.5.4"
parking_lot = "0.12.3"
paste = "1.0.14"
path-clean = "1.0.1"
petgraph = "0.7.0"
rand = { version = "0.8.5", default-features = false }
random_color = "1.0.0"
rayon = "1.10.0"
rstest = "0.24.0"
sanitise-file-name = "1.0.0"
serde = "1.0.196"
serde_json = "1.0.120"
serde_json5 = "0.1.0"
smallvec = { version = "1.13.2", features = ["const_generics", "const_new", "union"] }
strip-ansi-escapes = "0.2.0"
strum = "0.26.1"
termcolor = "1.4.1"
thiserror = "2.0.3"
toml = "0.8.16"
tracing = "0.1.40"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.18"
ustr = "1.0.0"
uuid = "1.11.0"
walkdir = "2.5.0"
xflags = "0.3"
xshell = "0.2"

# Workspace crates
collection_traits = { path = "collection_traits" }
dbe_backend = { path = "dbe_backend" }
dbe_ui = { path = "dbe_ui" }
diagnostic = { path = "diagnostic" }
list_edit = { path = "list_edit" }
squidfmt = { path = "squidfmt" }
utils = { path = "utils" }
#[patch.'https://github.com/TheLostLambda/miette']
#miette = { git = "https://github.com/zkat/miette", rev = "bf5aa3742fd664be3c93160b9c28c145b1ed8bc9" }
#
#[patch.crates-io]
#miette = { git = "https://github.com/zkat/miette", rev = "bf5aa3742fd664be3c93160b9c28c145b1ed8bc9" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0
#debug = 0
#strip = "debuginfo"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
publish = false
pre-release-replacements = [
    { file = "../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "../CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
    { file = "../CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
    { file = "../CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/juh9870/dbe/compare/{{tag_name}}...HEAD", exactly = 1 }
]
