[package]
name = "dbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", features = ["persistence"] }
egui_node_graph = { path = "../egui_node_graph/egui_node_graph", features = ["persistence"] }
egui_dock = {git = "https://github.com/Adanos020/egui_dock.git", branch = "release-0.7"}
egui_file = "0.10"
anyhow = "1.0.72"
glam = { version = "0.24.1", features = ["serde"] }
serde = "1.0.171"
serde_derive = "1.0.171"
rust-i18n = "2.0.0"
strum = "0.25.0"
strum_macros = "0.25.1"
paste = "1.0.14"
node_macro = {path = "../node_macro"}
rustc-hash = "1.1.0"
smallvec = "1.11.0"
enum_dispatch = "0.3.12"

[features]
f32 = []
f64 = []