[package]
name = "dbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
egui_node_graph = { path = "../egui_node_graph/egui_node_graph", features = ["persistence"] }
egui_dock = { git = "https://github.com/Adanos020/egui_dock.git", rev = "567bf55" }
egui_file = "0.10"
anyhow = "1.0.72"
glam = { version = "0.24.1", features = ["serde"] }
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.103"
rust-i18n = "2.0.0"
strum = "0.25.0"
strum_macros = "0.25.1"
paste = "1.0.14"
node_macro = { path = "../node_macro" }
rustc-hash = "1.1.0"
smallvec = "1.11.0"
enum_dispatch = "0.3.12"
tracing = "0.1.37"
ustr = { version = "0.9.0", features = ["serialization"] }
camino = { version = "1.1.6", features = ["serde1"] }
itertools = "0.11.0"
utils = { path = "../utils" }
thiserror = "1.0.43"
logos = "0.13.0"
egui_commonmark = "0.7.4"
bytesize = "1.3.0"
pluralizer = "0.4.0"
serde_json5 = "0.1.0"
toml = "0.8.0"
ordered-float = "3.9.1"
egui-toast = "0.8.1"
lazy_static = "1.4.0"
derivative = "2.2.0"

[dev-dependencies]
rstest = "0.18.2"

[features]
f32 = []
f64 = []
