[package]
name = "dbe"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bytesize = "1.3.0"
camino = { version = "1.1.6", features = ["serde1"] }
circular-buffer = "0.1.3"
derivative = "2.2.0"
duplicate = "1.0.0"
egui = "0.22.0"
egui-modal = "0.2.4"
egui-toast = "0.8.1"
egui_commonmark = "0.7.4"
egui_dock = "0.7"
egui_file = "0.10"
egui_node_graph = { path = "../egui_node_graph/egui_node_graph", features = ["persistence"] }
enum_dispatch = "0.3.12"
glam = { version = "0.24.1", features = ["serde"] }
itertools = "0.11.0"
knuffel = "3.2.0"
lazy_static = "1.4.0"
list_edit = { path = "../list_edit" }
miette = { version = "5.10.0", features = ["fancy"] }
node_macro = { path = "../node_macro" }
ordered-float = { version = "3.9.1", features = ["serde"] }
paste = "1.0.14"
pluralizer = "0.4.0"
rust-i18n = "2.0.0"
rustc-hash = "1.1.0"
serde = "1.0.171"
serde_json = "1.0.103"
serde_json5 = "0.1.0"
smallvec = "1.11.0"
strum = "0.25.0"
strum_macros = "0.25.1"
toml = "0.8.0"
tracing = "0.1.37"
undo = "0.50.0"
ustr = { version = "0.9.0", features = ["serialization"] }
utils = { path = "../utils" }

[dev-dependencies]
rstest = "0.18.2"

[features]
f32 = []
f64 = []
