[package]
name = "dbe2"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true, features = ["serde"] }
atomic_refcell = { workspace = true }
camino = { workspace = true }
derive_more = { workspace = true, features = ["debug"] }
diagnostic = { workspace = true }
dyn-clone = { workspace = true }
egui-snarl = { workspace = true, features = ["serde"] }
emath = { workspace = true }
fs-err = { workspace = true }
itertools = { workspace = true }
knuffel = { workspace = true }
miette = { workspace = true }
ordered-float = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_json5 = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ustr = { workspace = true, features = ["serde"] }
utils = { path = "../utils" }
walkdir = { workspace = true }

[dev-dependencies]
miette = { workspace = true, features = ["fancy-no-syscall"] }
rstest = { workspace = true }
