[package]
name = "dbe2_ui"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
camino = { workspace = true }
cansi = { workspace = true }
color-backtrace = { workspace = true }
csscolorparser = { workspace = true }
dbe2 = { workspace = true }
downcast-rs = { workspace = true }
dyn-clone = { workspace = true }
eframe = { workspace = true, features = ["persistence"] }
egui = { workspace = true }
egui-snarl = { workspace = true }
egui-toast = { workspace = true }
egui_dock = { workspace = true }
egui_file = { workspace = true }
egui_tracing = { workspace = true }
inline_tweak = { workspace = true }
itertools = { workspace = true }
list_edit = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
num-traits = { workspace = true }
num_cpus = { workspace = true }
random_color = { workspace = true }
rayon = { workspace = true }
serde_json5 = { workspace = true }
strip-ansi-escapes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
ustr = { workspace = true }
utils = { workspace = true }
