[package]
name = "dbe_backend"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/juh9870/dbe"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true, features = ["serde"] }
atomic_refcell = { workspace = true }
camino = { workspace = true, features = ["serde", "serde1"] }
derive_more = { workspace = true, features = ["debug"] }
diagnostic = { workspace = true }
downcast-rs = { workspace = true }
duplicate = { workspace = true }
dyn-clone = { workspace = true }
egui-snarl = { workspace = true, features = ["serde"] }
emath = { workspace = true }
exmex = { workspace = true }
fs-err = { workspace = true }
inline_tweak = { workspace = true }
itertools = { workspace = true }
knus = { workspace = true }
maybe-owned = { workspace = true }
miette = { workspace = true }
ordered-float = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }
paste = { workspace = true }
path-clean = { workspace = true }
petgraph = { workspace = true }
random_color = { workspace = true }
sanitise-file-name = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_json5 = { workspace = true }
smallvec = { workspace = true, features = ["serde", "union"] }
squidfmt = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ustr = { workspace = true, features = ["serde"] }
utils = { path = "../utils" }
uuid = { workspace = true, features = ["v4", "serde"] }
walkdir = { workspace = true }

[dev-dependencies]
miette = { workspace = true, features = ["fancy-no-syscall"] }
rand = { workspace = true, features = ["std", "small_rng"] }
rstest = { workspace = true }

[package.metadata.release]
release = false
