[package]
name = "stuff_editor"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/juh9870/dbe"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace-on-stack-overflow = { workspace = true }
color-backtrace = { workspace = true }
dbe_ui = { workspace = true }
eframe = { workspace = true, features = ["persistence"] }
egui_tracing = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[package.metadata.release]
release = false
