[package]
name = "eframe_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
dbe = {path = "../dbe", features = ["f32"]}
anyhow = "1.0.72"
tracing-subscriber = "0.3"
clap = { version = "4.4.3", features = ["derive", "env"] }
camino = "1.1.6"
tracing = "0.1.37"
