[package]
name = "eframe_runner"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
backtrace-on-stack-overflow = { version = "0.3.0", optional = true }
camino = "1.1.6"
clap = { version = "4.4.3", features = ["derive", "env"] }
color-backtrace = "0.6.0"
dbe = { path = "../dbe", features = ["f32"] }
eframe = "0.22.0"
egui = "0.22.0"
tracing-subscriber = "0.3"

[features]
debug = ["dep:backtrace-on-stack-overflow"]
