[package]
name = "eh_codegen"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/juh9870/dbe"
publish = false

[dependencies]
camino = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
codegen_schema = { workspace = true }
color-backtrace = { workspace = true }
convert_case = { workspace = true }
fs-err = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
tracing = { workspace = true }
tracing-panic = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
utils = { workspace = true }

[package.metadata.release]
release = false
