[package]
name = "list_edit"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collection_traits = { workspace = true }
egui = { workspace = true }
egui_dnd = { workspace = true }
inline_tweak = { workspace = true }

[package.metadata.release]
release = false

[lints]
workspace = true
