[package]
name = "node_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0" }
quote = "1.0"
proc-macro2 = "1.0"
attribute-derive = "0.6"
pluralizer="0.4.0"
proc-macro-crate="1.3.1"