[package]
name = "node_macro"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attribute-derive = "0.6"
pluralizer = "0.4.0"
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0"
quote = "1.0.36"
syn = { version = "2.0" }
