[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
smallvec = { workspace = true, features = ["const_generics"] }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[package.metadata.release]
release = false
