[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
collection_traits = { workspace = true }
dashmap = { workspace = true }
dyn-clone = { workspace = true }
ecolor = { workspace = true }
emath = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
num-traits = { workspace = true }
ordermap = { workspace = true }
ouroboros = { workspace = true }
smallvec = { workspace = true, features = ["const_generics"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[package.metadata.release]
release = false

[lints]
workspace = true
