[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/juh9870/dbe"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
xflags = "0.3"
xshell = "0.2"

[package.metadata.release]
release = false
