[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/juh9870/dbe"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
fs-err = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
utils = { workspace = true }
xflags = { workspace = true }
xshell = { workspace = true }

[package.metadata.release]
release = false

[lints]
workspace = true
